k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8slon-deployment
  namespace: k8slon
  labels:
    app: k8slon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8slon
  template:
    metadata:
      labels:
        app: k8slon
    spec:
      containers:
      - name: k8slon
        image: vpetersson/k8slon:latest
        ports:
        - containerPort: 5000
