k8s/ingress-mtls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8slon-ing
  namespace: k8slon
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: k8slon/wott-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "2"
spec:
  tls:
  - hosts:
    - k8slon.vpetersson.com
    secretName: k8slon-tls
  rules:
  - host: k8slon.vpetersson.com
    http:
      paths:
        - path: /
          backend:
            serviceName: k8slon-service
            servicePort: 80
